# executor

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.py  sitemap.xml
.github/workflows/: docs.yml
adapters/: __init__.py  base.py  ibkr.py  sandbox.py
custom-adapters/: index.html
docs/: custom-adapters.md  getting-started.md  index.md
docs/reference/: adapters.md  base-adapter.md  config.md  executor.md  ibkr.md  sandbox.md  transactions.md  web.md
executor/: __init__.py  config.py  main.py  transactions.py
getting-started/: index.html
reference/adapters/: index.html
reference/base-adapter/: index.html
reference/config/: index.html
reference/executor/: index.html
reference/ibkr/: index.html
reference/sandbox/: index.html
reference/transactions/: index.html
reference/web/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  test_adapters.py  test_config.py  test_ibkr.py  test_main.py  test_transactions.py  test_web.py
web/: __init__.py  app.py
web/static/: style.css
web/templates/: index.html
